# tiny_bail

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
