[package]
name = "tiny_bail"
version = "0.1.0"
authors = ["Ben Frankel"]
edition = "2021"
description = "Small but flexible convenience macros for bailing on failure."
repository = "https://github.com/benfrankel/tiny_bail"
license = "MIT OR Apache-2.0"
keywords = ["failure", "error", "macro", "log", "tracing"]
categories = [
    "development-tools::debugging",
    "rust-patterns",
    "no-std::no-alloc",
]

[lints.rust]
missing_docs = "deny"

[features]
# Default to `tracing::warn!`.
default = ["tracing", "warn"]
# Set the log level to `trace` for bail logs.
trace = []
# Set the log level to `debug` for bail logs.
debug = []
# Set the log level to `info` for bail logs.
info = []
# Set the log level to `warn` for bail logs.
warn = []
# Set the log level to `error` for bail logs.
error = []

[dependencies]
log = { version = "0.4", optional = true }
tracing = { version = "0.1", features = ["log"], optional = true }

[package.metadata.docs.rs]
all-features = true
