[package]
name = "tiny_bail"
version = "0.6.0"
authors = ["Ben Frankel"]
edition = "2024"
description = "Small but flexible macros for bailing on failure."
repository = "https://github.com/benfrankel/tiny_bail"
license = "MIT OR Apache-2.0"
keywords = ["failure", "error", "macro", "log", "tracing"]
categories = [
    "development-tools::debugging",
    "rust-patterns",
    "no-std::no-alloc",
]

[lints.rust]
missing_docs = "deny"

[features]
# Default to `tracing::warn!`.
default = ["tracing", "warn"]
# Set the log level to `trace`.
trace = []
# Set the log level to `debug`.
debug = []
# Set the log level to `info`.
info = []
# Set the log level to `warn`.
warn = []
# Set the log level to `error`.
error = []

[dependencies]
log = { version = "0.4", optional = true }
tracing = { version = "0.1", features = ["log"], optional = true }
